tests/shouldFail/j015c.c
extern int x;
float x = 0;

int main(void) {
	return 0;
}
